2005-10-20  Marcus Brinkmann  <marcus@g10code.de>

	* src/installer-finish.nsi: Add support for Add/Remove Programs.

2005-10-20  Werner Koch  <wk@g10code.com>

	* m4/gpg4win.m4 (GPG4WIN_FIND): Quote a file variable.
	(GPG4WIN_SPKG): Ditto.

2005-10-20  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg4win.nsi: Add start menu support.
	* src/inst-sections.nsi: Likewise.
	* src/installer.nsi: Likewise.
	* src/installer-finish.nsi: Likewise.

	* src/gpg4win.mk.in (GETVAR): Don't quote the first $.
	(STRIP_macro): New macro.
	(SPKG, BPKG): Use it here.

	* Makefile.am (EXTRA_DIST): New target.
	* include/Makefile.am (EXTRA_DIST): Change config.nsh.in to
	config.nsi.in.
	* src/Makefile.am (EXTRA_DIST): Remove pkg-config.  Add nsi files.

	* src/inst-gpgol.nsi: Change libgpgol-0.9.3.dll to gpgol.dll.

	* src/gpg4win.mk.in (stamp/stamp-$(1)-02-configure): Add
	-mms-bitfields to CFLAGS.

	* src/gpg4win.mk.in (stamps/stamp-final): New target that replaces
	phony target final.

2005-10-20  Werner Koch  <wk@g10code.com>

	* src/*.nsi: Add a Latin-1 tag to make sure that Emacs uses the
	correct encoding.
	* doc/nsi-mode.el: Added for convenience.

2005-10-20  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Check for makensis.  Add gnupg as dependency for
	gpgme.  Change config.sh into config.nsi.
	* include/config.sh.in: File removed.
	* src/gpg4win.sh: File removed.
	* include/config.nsi.in: New file.
	* include/Makefile.am (EXTRA_DIST): Change config.sh.in into
	config.nsi.in.
	* src/Makefile.am (gpg4win-$(VERSION).exe): New target.
	(gpg4win-src-$(VERSION).exe): New target.
	(all-local): Remove dependency on phony target all-gpg4win.
	(all-local): Add dependency on gpg4win-$(VERSION).exe and
	gpg4win-src-$(VERSION).exe.
	(clean-local): New rule for this target.
	* src/gpg4win.nsi, src/gpg4win-src.nsi, src/inst-atk.nsi,
	src/inst-gettext.nsi, src/inst-glib.nsi, src/inst-gnupg.nsi,
	src/inst-gpa.nsi, src/inst-gpgme.nsi, src/inst-gpgol.nsi,