@@ -34,6 +34,8 @@
 !define INSTALL "@INSTALL@"
 !define WGET @WGET@
 
+# If debugging is desired.
+@GPG4WIN_DEBUG@
 
 # The package build list, in order.
 !define gpg4win_build_list "@gpg4win_build_list@"
@@ -45,59 +47,73 @@
 
 # The path of each package.
 
+@HAVE_PKG_LIBGPG_ERROR@
 !define gpg4win_pkg_libgpg_error @gpg4win_pkg_libgpg_error@
 !define gpg4win_pkg_libgpg_error_version @gpg4win_pkg_libgpg_error_version@
 
+@HAVE_PKG_GPGME@
 !define gpg4win_pkg_gpgme @gpg4win_pkg_gpgme@
 !define gpg4win_pkg_gpgme_version @gpg4win_pkg_gpgme_version@
 
+@HAVE_PKG_GNUPG@
 !define gpg4win_pkg_gnupg @gpg4win_pkg_gnupg@
 !define gpg4win_pkg_gnupg_version @gpg4win_pkg_gnupg_version@
 
+@HAVE_PKG_GPGOL@
 !define gpg4win_pkg_gpgol @gpg4win_pkg_gpgol@
 !define gpg4win_pkg_gpgol_version @gpg4win_pkg_gpgol_version@
 
+@HAVE_PKG_GPA@
 !define gpg4win_pkg_gpa @gpg4win_pkg_gpa@
 !define gpg4win_pkg_gpa_version @gpg4win_pkg_gpa_version@
 
+@HAVE_PKG_ZLIB@
 !define gpg4win_pkg_zlib @gpg4win_pkg_zlib@
 !define gpg4win_pkg_zlib_version @gpg4win_pkg_zlib_version@
 !define gpg4win_pkg_zlib_dev @gpg4win_pkg_zlib_dev@
 !define gpg4win_pkg_zlib_src @gpg4win_pkg_zlib_src@
 
+@HAVE_PKG_LIBPNG@
 !define gpg4win_pkg_libpng @gpg4win_pkg_libpng@
 !define gpg4win_pkg_libpng_version @gpg4win_pkg_libpng_version@
 !define gpg4win_pkg_libpng_dev @gpg4win_pkg_libpng_dev@
 !define gpg4win_pkg_libpng_src @gpg4win_pkg_libpng_src@
 
+@HAVE_PKG_PKGCONFIG@
 !define gpg4win_pkg_pkgconfig @gpg4win_pkg_pkgconfig@
 !define gpg4win_pkg_pkgconfig_version @gpg4win_pkg_pkgconfig_version@
 !define gpg4win_pkg_pkgconfig_src @gpg4win_pkg_pkgconfig_src@
 
+@HAVE_PKG_GLIB@
 !define gpg4win_pkg_glib @gpg4win_pkg_glib@
 !define gpg4win_pkg_glib_version @gpg4win_pkg_glib_version@
 !define gpg4win_pkg_glib_dev @gpg4win_pkg_glib_dev@
 !define gpg4win_pkg_glib_src @gpg4win_pkg_glib_src@
 
+@HAVE_PKG_ATK@
 !define gpg4win_pkg_atk @gpg4win_pkg_atk@
 !define gpg4win_pkg_atk_version @gpg4win_pkg_atk_version@
 !define gpg4win_pkg_atk_dev @gpg4win_pkg_atk_dev@
 !define gpg4win_pkg_atk_src @gpg4win_pkg_atk_src@
 
+@HAVE_PKG_PANGO@
 !define gpg4win_pkg_pango @gpg4win_pkg_pango@
 !define gpg4win_pkg_pango_version @gpg4win_pkg_pango_version@
 !define gpg4win_pkg_pango_dev @gpg4win_pkg_pango_dev@
 !define gpg4win_pkg_pango_src @gpg4win_pkg_pango_src@
 
+@HAVE_PKG_GTK_@
 !define gpg4win_pkg_gtk_ @gpg4win_pkg_gtk_@
 !define gpg4win_pkg_gtk__version @gpg4win_pkg_gtk__version@
 !define gpg4win_pkg_gtk__dev @gpg4win_pkg_gtk__dev@
 !define gpg4win_pkg_gtk__src @gpg4win_pkg_gtk__src@
 
+@HAVE_PKG_LIBICONV@
 !define gpg4win_pkg_libiconv @gpg4win_pkg_libiconv@
 !define gpg4win_pkg_libiconv_version @gpg4win_pkg_libiconv_version@
 !define gpg4win_pkg_libiconv_src @gpg4win_pkg_libiconv_src@
 
+@HAVE_PKG_GETTEXT@
 !define gpg4win_pkg_gettext @gpg4win_pkg_gettext@
 !define gpg4win_pkg_gettext_version @gpg4win_pkg_gettext_version@
 !define gpg4win_pkg_gettext_src @gpg4win_pkg_gettext_src@
