@@ -81,7 +81,7 @@ endef
 
 # Support macro.  Strip all dll and exe files below $(1).
 define STRIP_macro
-	if test -z "$(DEBUG)"; then			\
+	if test -z '$(DEBUG)'; then			\
 	  (cd $(1);					\
 	   for f in `find . -name \*.dll		\
 		  -o -name \*.exe`; do			\
