@@ -18,7 +18,6 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA
 
 !include "../include/config.nsi"
-!define HAVE_PKG_GPA 1
 
 # The package name and version.  PRETTY_PACKAGE is a user visible name
 # only while PACKAGE is useful for filenames etc.  PROD_VERSION is the
@@ -62,7 +61,9 @@
 
 
 # Define if in debug mode.
-#!define DEBUG
+!ifdef GPG4WIN_DEBUG
+!define DEBUG
+!endif
 
 
 # The installation directory.
