@@ -19,45 +19,96 @@
 
 # Sections
 
+!ifdef HAVE_PKG_GNUPG
 !include "inst-gnupg.nsi"
+!endif
+!ifdef HAVE_PKG_LIBGPG_ERROR
 !include "inst-libgpg-error.nsi"
+!endif
+!ifdef HAVE_PKG_LIBICONV
 !include "inst-libiconv.nsi"
+!endif
+!ifdef HAVE_PKG_PKGCONFIG
 !include "inst-pkgconfig.nsi"
+!endif
+!ifdef HAVE_PKG_ZLIB
 !include "inst-zlib.nsi"
+!endif
+!ifdef HAVE_PKG_GPGME
 !include "inst-gpgme.nsi"
+!endif
+!ifdef HAVE_PKG_GETTEXT
 !include "inst-gettext.nsi"
+!endif
+!ifdef HAVE_PKG_GLIB
 !include "inst-glib.nsi"
+!endif
+!ifdef HAVE_PKG_LIBPNG
 !include "inst-libpng.nsi"
+!endif
+!ifdef HAVE_PKG_GPGOL
 !include "inst-gpgol.nsi"
+!endif
+!ifdef HAVE_PKG_PANGO
 !include "inst-pango.nsi"
+!endif
+!ifdef HAVE_PKG_ATK
 !include "inst-atk.nsi"
+!endif
+!ifdef HAVE_PKG_GTK_
 !include "inst-gtk+.nsi"
+!endif
+!ifdef HAVE_PKG_GPA
 !include "inst-gpa.nsi"
+!endif
 
 # Dependency Management
 
 !include "Sections.nsh"
 
-Function .onSelChange
+Function CalcDepends
   # This section could very well be autogenerated from the
   # information in configure.ac.  Note that it doesn't hurt to have
   # stuff here for packages that we don't include.
 
   # First clear all indirect dependencies.
+!ifdef HAVE_PKG_LIBICONV
   !insertmacro UnselectSection ${SEC_libiconv}
+!endif
+!ifdef HAVE_PKG_GETTEXT
   !insertmacro UnselectSection ${SEC_gettext}
+!endif
+!ifdef HAVE_PKG_ZLIB
   !insertmacro UnselectSection ${SEC_zlib}
+!endif
+!ifdef HAVE_PKG_LIBPNG
   !insertmacro UnselectSection ${SEC_libpng}
+!endif
+!ifdef HAVE_PKG_PKGCONFIG
   !insertmacro UnselectSection ${SEC_pkgconfig}
+!endif
+!ifdef HAVE_PKG_GLIB
   !insertmacro UnselectSection ${SEC_glib}
+!endif
+!ifdef HAVE_PKG_ATK
   !insertmacro UnselectSection ${SEC_atk}
+!endif
+!ifdef HAVE_PKG_PANGO
   !insertmacro UnselectSection ${SEC_pango}
+!endif
+!ifdef HAVE_PKG_GTK_
   !insertmacro UnselectSection ${SEC_gtk_}
+!endif
+!ifdef HAVE_PKG_LIBGPG_ERROR
   !insertmacro UnselectSection ${SEC_libgpg_error}
+!endif
+!ifdef HAVE_PKG_GPGME
   !insertmacro UnselectSection ${SEC_gpgme}
+!endif
 
   # Then enable all dependencies in reverse build list order!
 
+!ifdef HAVE_PKG_GPA
   !insertmacro SectionFlagIsSet ${SEC_gpa} ${SF_SELECTED} have_gpa skip_gpa
   have_gpa:
   !insertmacro SelectSection ${SEC_zlib}
@@ -67,7 +118,9 @@ Function .onSelChange
   !insertmacro SelectSection ${SEC_gpgme}
   !insertmacro SelectSection ${SEC_gnupg}
   skip_gpa:
+!endif
 
+!ifdef HAVE_PKG_GTK_
   !insertmacro SectionFlagIsSet ${SEC_gtk_} \
 		${SF_SELECTED} have_gtk_ skip_gtk_
   have_gtk_:
@@ -78,51 +131,66 @@ Function .onSelChange
   !insertmacro SelectSection ${SEC_gettext}
   !insertmacro SelectSection ${SEC_pkgconfig}
   skip_gtk_:
+!endif
 
+!ifdef HAVE_PKG_ATK
   !insertmacro SectionFlagIsSet ${SEC_atk} \
 		${SF_SELECTED} have_atk skip_atk
   have_atk:
   !insertmacro SelectSection ${SEC_glib}
   !insertmacro SelectSection ${SEC_pkgconfig}
   skip_atk:
+!endif
 
+!ifdef HAVE_PKG_PANGO
   !insertmacro SectionFlagIsSet ${SEC_pango} \
 		${SF_SELECTED} have_pango skip_pango
   have_pango:
   !insertmacro SelectSection ${SEC_glib}
   !insertmacro SelectSection ${SEC_pkgconfig}
   skip_pango:
+!endif
 
+!ifdef HAVE_PKG_GPGOL
   !insertmacro SectionFlagIsSet ${SEC_gpgol} \
 		${SF_SELECTED} have_gpgol skip_gpgol
   have_gpgol:
   !insertmacro SelectSection ${SEC_gpgme}
   !insertmacro SelectSection ${SEC_gnupg}
   skip_gpgol:
+!endif
 
+!ifdef HAVE_PKG_LIBPNG
   !insertmacro SectionFlagIsSet ${SEC_libpng} \
 		${SF_SELECTED} have_libpng skip_libpng
   have_libpng:
   !insertmacro SelectSection ${SEC_pkgconfig}
   skip_libpng:
+!endif
 
+!ifdef HAVE_PKG_GLIB
   !insertmacro SectionFlagIsSet ${SEC_glib} \
 		${SF_SELECTED} have_glib skip_glib
   have_glib:
   !insertmacro SelectSection ${SEC_pkgconfig}
   skip_glib:
+!endif
 
+!ifdef HAVE_PKG_GETTEXT
   !insertmacro SectionFlagIsSet ${SEC_gettext} \
 		${SF_SELECTED} have_gettext skip_gettext
   have_gettext:
   !insertmacro SelectSection ${SEC_libiconv}
   skip_gettext:
+!endif
 
+!ifdef HAVE_PKG_GPGME
   !insertmacro SectionFlagIsSet ${SEC_gpgme} \
 		${SF_SELECTED} have_gpgme skip_gpgme
   have_gpgme:
   !insertmacro SelectSection ${SEC_libgpg_error}
   skip_gpgme:
+!endif
 
   # Package "zlib" has no dependencies.
   # Package "pkgconfig" has no dependencies.
@@ -132,13 +200,27 @@ Function .onSelChange
 
 FunctionEnd
 
+Function .onInit
+  Call CalcDepends
+FunctionEnd
+
+Function .onSelChange
+  Call CalcDepends
+FunctionEnd
+
 
 # This must be in a central place.  Urgs.
 
 !insertmacro MUI_FUNCTION_DESCRIPTION_BEGIN
+!ifdef HAVE_PKG_GPGOL
   !insertmacro MUI_DESCRIPTION_TEXT ${SEC_gpgol} $(DESC_SEC_gpgol)
+!endif
+!ifdef HAVE_PKG_GPA
   !insertmacro MUI_DESCRIPTION_TEXT ${SEC_gpa} $(DESC_SEC_gpa)
+!endif
+!ifdef HAVE_PKG_GNUPG
   !insertmacro MUI_DESCRIPTION_TEXT ${SEC_gnupg} $(DESC_SEC_gnupg)
+!endif
 !insertmacro MUI_FUNCTION_DESCRIPTION_END
 
 
